# cambai-python-sdk

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  detailed_test.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.env/: pyvenv.cfg
.github/workflows/: installer.yml  python.yml
.openapi-generator/: FILES
camb/: __init__.py  client.py  environment.py  raw_client.py
camb/dub/: __init__.py  (+2 more)
cambai/: __init__.py  configuration.py  stream.py
docs/: ApisApi.md  AudioOutputFileURLResponse.md  AudioOutputType.md  AudioSeparationApi.md  AudioSeparationRunInfoResponse.md  BodyTranslateTranslatePost.md  CreateAPIKeyRequestPayload.md  CreateCustomVoiceOut.md  CreateTTSRequestPayload.md  CreateTTSStreamRequestPayload.md  CreateTextToAudioRequestPayload.md  CreateTextToVoiceRequestPayload.md  CreateTranslatedStoryRequestPayload.md  CreateTranslatedTTSRequestPayload.md  CreateTranslationStreamRequestPayload.md  DialogueItem.md  DictionariesApi.md  Dictionary.md  DubAltFormatResponseBody.md  DubApi.md  DubbedOutputInAltFormatRequestPayload.md  EndToEndDubbingRequestPayload.md  ExpireAPIKeyRequestPayload.md  Formalities.md  Gender.md  HTTPValidationError.md  LanguageItem.md  Languages.md  OrchestratorPipelineResult.md  OutputAPIKey.md  OutputFormat.md  OutputType.md  RequestDubbedOutputInAltFormat200Response.md  RunInfoResponse.md  StoriesApi.md  StoryRunInfoResponse.md  TTSStreamOutputFormat.md  TaskID.md  TaskStatus.md  TextToAudioApi.md  (+10 more)
examples/: async_tts_call.py  baseten_provider_example.py  perform_dubbing.py  text_to_audio.py
test/: test_apis_api.py
(+128 files in other folders)
